<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="140dp"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    cardview:cardCornerRadius="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="3">
          <ImageView
              android:layout_width="match_parent"
              android:scaleType="centerCrop"
              android:layout_height="60dp"
              android:layout_margin="5dp"
              android:layout_weight="2"
              android:id="@+id/image_in_cart"


              />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/productname"
                        android:id="@+id/txt_card_view_product_name"
                        android:textSize="14sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vendorname"

                        android:textSize="12sp"
                        android:id="@+id/txt_card_view_vendor_name"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vendoraddress"
                        android:textSize="12sp"
                        android:id="@+id/txt_card_view_Vendor_add"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:gravity="end"
                    android:layout_alignParentEnd="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"

                        android:textSize="12sp"
                        />
                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_price"
                    android:id="@+id/txt_cartview_price"
                    android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_count"
                        android:textColor="#ff1e00"
                        android:id="@+id/txt_cartview_count"
                        android:textSize="12sp" />


                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/button_width"
                android:layout_height="match_parent"
                android:text="@string/call_vendor"
                android:textSize="@dimen/Standard_txtSize"
                android:textAllCaps="false"
                android:id="@+id/btn_call_vendor"
             />
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/button_width"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/remove_from_cart"
                android:textSize="@dimen/Standard_txtSize"
                android:layout_alignParentRight="true"
                android:id="@+id/btn_remove_from_cart"

                />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
